--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,8 @@
         <activity android:name=".chapter3.AnimatorActivity" />
         <activity android:name=".chapter3.diforientationconflict.HorizontalScrollViewActivity" />
         <activity android:name=".chapter3.sameorientationconflict.StickyLayoutActivity" />
+        <activity android:name=".chapter4.circularimageview.CircularImageViewActivity" />
+        <activity android:name=".chapter4.Chapter4MainActivity"></activity>
     </application>
 
 </manifest>
